:lipstick: - added client list view

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <body>
         <div id="root"></div>
 
+        <div id="modal"></div>
+
+        <div id="loader"></div>
+
+        <div id="notification"></div>
+
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
